--- a/css/custom.css
+++ b/css/custom.css
@@ -4,7 +4,20 @@ body{
   margin-top: 30px;
 }
 
-.canvas-wrapper{
+.table-wrapper{
   width: max-content;
-  border: 10px solid white;
+  border: 10px solid violet;
+}
+
+td{
+  width: 50px;
+  height: 50px;
+  border: 1px solid white;
+  font-size: 30px;
+  text-align: center;
+  font-weight: bold;
+}
+
+td:hover{
+  cursor: context-menu;
 }
